2007-05-22  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-tcp-stream-openssl.c:
	(camel_tcp_stream_ssl_class_init): Add a g_warning() to warn people
	about using this unsupported alternative to NSS.

2007-05-21  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-tcp-stream-openssl.c: (socket_connect): When calling
	the standard connect () function, use sizeof (struct sockaddr) instead
	of just passing an uninitialized socklen_t, so that this can actually
	succeed, instead of failing with an Invalid Argument errno.

2007-05-16  Murray Cumming  <murrayc@murrayc.com>

	* camel/camel-mime-message.c: (camel_mime_message_set_subject):
	Prevent memory corruption. g_strstrip() does not return a newly
	allocated string. Also, camel_header_encode_string() doesn't seem to
	like being given NULL.

2007-05-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* Shaped up the Unit tests
	* Fixed a bunch of -Wall warnings
	* Fixed some of the Design By Contract clausules

2007-05-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Added a couple of new signals on TnyAccountStore and TnyAccount

2007-05-21 Javier Fernandez Garcia-Boente <jfernandez@igalia.com>

	* Use 'what' string parameter of asyn status callback to knonw 
	what operaiton is being executed, in oder to decide if progress
	data is send back or not.a

	* Add camel operation and progress call to 'folder_rename' operation.
	
2007-05-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* TnyAccountStore's alert_func has a 'question' parameter now

	* This was a major API change

2007-05-18  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

   	* folder was 'reason' unnecesary in copy_folder_async.
        * fix bug: g_error_free not neccesary after g_error_propagate

2007-05-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Recursively removing folders

2007-05-17  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_get_iap_list): When MAEMO_CONIC_DUMMY 